# kondo-backend

./: .gitignore  .pyre_configuration  CHANGELOG.md  Dockerfile  README.rst  docker-compose.yml  kondo-backend.dev.config  pyproject.toml  run.py  run_api_server.py  run_repo_server.py
.pyre/: pyre.stderr
instance/: settings.toml
kondo_backend/: __init__.py  log.py
kondo_backend/auth/: __init__.py  login_github.py
kondo_backend/git_tools/: __init__.py  clone_repository.py
kondo_backend/models/: __init__.py  repo.py  required_file.py  room.py  temp.json  violation.py
kondo_backend/organization/: __init__.py  get_orgs.py  get_repositories.py
kondo_backend/repo_processor/: __init__.py  detect_repository_type.py  get_access_token.py  get_installation_repositories.py  get_installations.py  process_repositories.py
kondo_backend/room_engine/: __init__.py  detect_repository_type.py  get_violations.py  initialize_rooms.py  plugin.py  required_file.py  room.py  room_loader.py  validate_repo.py
tests/: conftest.py  test_kondo_backend.py
tests/auth/: test_login_github.py
tests/fixtures/sample-room-terraform/: kondo.toml
tests/models/: test_repo.py
tests/organization/: test_get_orgs.py  test_get_repositories.py
tests/repo_processor/: test_detect_repository_type.py  test_get_access_token.py  test_get_installation_repositories.py  test_get_installations.py
tests/room_engine/: test_get_violations.py  test_validate_repo.py
tests/test_git_tools/: test_clone_repository.py
